<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".EndGameFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/grats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textColor="@android:color/background_dark" android:gravity="center" android:textSize="36sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/ytime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="24sp"
                android:gravity="center" android:textColor="@android:color/background_dark"/>
        <TextView
                android:text="@string/timeZero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/timeTextView" android:gravity="center"
                android:textSize="24sp" android:textColor="@android:color/background_dark"
                android:layout_marginBottom="6dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/sizeFour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        android:textColor="@android:color/background_dark" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r40textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r41textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r42textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r43textView" android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/sizeFive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView14"
                        android:textColor="@android:color/background_dark" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r50textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r51textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r52textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r53textView" android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="173dp" android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/sizeSix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView19"
                        android:textColor="@android:color/background_dark" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r60textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r61textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r62textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r63textView" android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/sizeSeven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView24"
                        android:textColor="@android:color/background_dark" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r70textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r71textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r72textView" android:textSize="18sp"/>
                <TextView
                        android:text="@string/zero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/r73textView" android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:text="@string/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button2" android:textSize="24sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>