<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".InfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
            android:text="@string/back_to_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backFromInfo" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.962"/>
    <TextView
            android:text="@string/mathersmobile_is_a_mathematic_game_with_a_goal_to_get_proper_numbers_sums_in_each_row_and_column"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="25dp" android:layout_marginStart="25dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.151"
            android:textColor="#000000" android:textSize="18sp"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="36sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.00999999" android:textColor="#000000"/>
    <TextView
            android:text="@string/player_is_selecting_numbers_by_clicking_on_them_when_the_number_is_selected_the_sum_in_proper_column_and_row_is_changed_if_the_sum_is_correct_it_will_change_the_color_to_orange_if_all_sums_are_corectly_reached_player_wins_after_winning_there_are_displayed_information_about_times_player_reached_with_each_size_of_the_board_and_with_each_range_of_numbers"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="18sp"
            android:textColor="#000000" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.661"/>
</android.support.constraint.ConstraintLayout>