<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
             tools:context=".GameFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp" android:layout_marginTop="156dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:layout_marginRight="20dp">
    </LinearLayout>
    <Button
            android:text="@string/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" android:layout_marginTop="12dp" app:layout_constraintTop_toTopOf="parent"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:id="@+id/topSumsLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"
            android:layout_marginTop="91dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:layout_marginRight="20dp">
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="65dp"
            android:layout_height="260dp"
            android:id="@+id/leftSumLayout"
            android:layout_marginTop="156dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="15dp" android:layout_marginStart="15dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="280dp" android:layout_marginRight="280dp">
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="182dp"
            android:layout_height="39dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/tenMinutesView" android:layout_weight="1"
                android:gravity="center_vertical|center" android:textSize="30sp"
                android:textColor="@android:color/background_dark"/>
        <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/minutesView" android:layout_weight="1"
                android:gravity="center_vertical|center" android:textSize="30sp"
                android:textColor="@android:color/background_dark"/>
        <TextView
                android:text="@string/colon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/textView7" android:layout_weight="1"
                android:gravity="center_vertical|center" android:textSize="30sp"
                android:textColor="@android:color/background_dark"/>
        <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/tenSecondsView" android:layout_weight="1"
                android:gravity="center_vertical|center" android:textSize="30sp"
                android:textColor="@android:color/background_dark"/>
        <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/secondsView" android:layout_weight="1"
                android:gravity="center_vertical|center" android:textSize="30sp"
                android:textColor="@android:color/background_dark"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>